--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,6 @@ color: #434455;
    line-height: 24px;
    letter-spacing: 0.32px;
 
-   padding-top: 24px;
-   padding-bottom: 24px;
    
 }
 
@@ -136,6 +134,7 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: #ffffff;
 background-color: #4d5ae5;
+margin-top: 48px;
 }
 
 .cursor {
@@ -190,6 +189,7 @@ letter-spacing: 0.02em;
 text-align: center;
 color: var(--white-color);
 background-color: #2E2F42;
+
 }
 
 .section-two {
@@ -309,6 +309,8 @@ border-bottom: 1px solid var(--cornflower-color);
    gap: 40px;
   }
 
-  .menu-section-one {
-   
-  }
+.cosmos {
+display: box;
+align-content: center;
+justify-content: center;
+}
