--- a/css/styles.css
+++ b/css/styles.css
@@ -309,6 +309,8 @@ padding: 0 15px 0 15px ;
 .menu-header-navigation {
    display: flex;
    align-items: center;
+   padding-top: 24px;
+   padding-bottom: 24px;
 }
 
 .list-contact {
