--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,7 @@ margin: 0 auto;
 
 .header {
 border-bottom: 1px solid var(--cornflower-color);
-margin: o auto;
+margin: 0 auto;
 padding: 0 15px 0 15px ;
 }
 
