--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
        
 .main-navigation {
    background-color: var(--white-color);
+   border-bottom: 1px solid #e7e9fc,
 }
 
 .logo {
@@ -40,7 +41,7 @@ body {
    font-style: normal;
    margin-right: 76px;
    display: inline-block;
-   border-bottom: 1px solid #e7e9fc,
+  
 }   
 
 .link {
@@ -303,8 +304,6 @@ padding: 0 15px 0 15px ;
    display: flex;
    padding-top: 24px;
    padding-bottom: 24px;
-  
-  
   }
 .menu-header-navigation {
    display: flex;
@@ -319,7 +318,19 @@ padding: 0 15px 0 15px ;
    margin-left: 332px;
 }
 
+.hero-styling {
 
+}
 
+.section-one-styling {
+display: block;
+max-width: 496px;
+margin: 0 auto;
+padding-top: 188px;
+padding-bottom: 188px;
 
+}
 
+.button-styling {
+
+}
