--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,7 @@ letter-spacing: 0.02em;
 text-align: center;
 color: var(--white-color);
 background-color: #2E2F42;
+margin-bottom: 48px;  
 
 }
 
@@ -332,5 +333,11 @@ padding-bottom: 188px;
 }
 
 .button-styling {
+display: block;
+margin: auto;
 
-}
+min-width: 169px;
+height: 56px;
+border: none;
+border-radius: 4px;
+}  
