--- a/css/styles.css
+++ b/css/styles.css
@@ -319,10 +319,6 @@ padding: 0 15px 0 15px ;
    margin-left: 332px;
 }
 
-.hero-styling {
-
-}
-
 .section-one-styling {
 display: block;
 max-width: 496px;
@@ -335,9 +331,25 @@ padding-bottom: 188px;
 .button-styling {
 display: block;
 margin: auto;
-
 min-width: 169px;
 height: 56px;
 border: none;
 border-radius: 4px;
 }  
+
+.visually-hidden {
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   border: 0;
+   padding: 0;
+   white-space: nowrap;
+   clip-path: inset(100%);
+   clip: rect(0 0 0 0);
+   overflow: hidden;
+}
+.section-two-styling {
+   display: flex;
+
+}
