--- a/css/styles.css
+++ b/css/styles.css
@@ -181,11 +181,15 @@ cursor: pointer;
 
 .footer-background {
    background-color: #2E2F42;
+   padding-top: 100px;
+   padding-bottom: 100px;
 }
 .footer-text {
    color: #F4F4FD;
    line-height: 1.5;
    letter-spacing: 0.02em;
+   max-width: 264px;
+   margin-top: 16px;
 }
 
 .hero {
