--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ ul {
    font-style: normal;
    margin-right: 76px;
    display: inline-block;
+   margin-bottom: 16px;
   
 }   
 
@@ -183,6 +184,7 @@ cursor: pointer;
    background-color: #2E2F42;
    padding-top: 100px;
    padding-bottom: 100px;
+   
 }
 .footer-text {
    color: #F4F4FD;
@@ -195,6 +197,7 @@ cursor: pointer;
 .hero {
 background-color: #2E2F42;
 padding: 188px 0px;
+
 
 }
 
