--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,8 @@ font-weight: 500;
 line-height: 24px;
 letter-spacing: 0.4px;
 color: var(--navy-blue-color);
+margin-bottom: 8px;
+
 }
 
 .section-two-text {
@@ -271,6 +273,7 @@ font-style: normal;
 font-weight: 500;
 line-height: 24px;
 letter-spacing: 0.4px;
+text-align: center;
 }
 
 .section-four-positions {
@@ -282,6 +285,7 @@ font-weight: 400;
 line-height: 24px; 
 letter-spacing: 0.32px;
 margin-top: 8px;
+text-align: center;
 }
 
 .project-names {
@@ -383,10 +387,18 @@ border-radius: 4px;
 
 }
 .section-two-styling {
-   display: flex;
+  
+  display: flex;
    gap: 24px;
    width: calc((100%-72px)/4);
+
 }
+/*
+.section-two-li {
+   display: flex;
+   gap: 24px;
+   flex-basis: calc((100% - 72px) / 4);
+}*/
 
 .section-tree-styling {
    padding-top: 0;
