--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ ul {
        
 .main-navigation {
    background-color: var(--white-color);
-   border-bottom: 1px solid #e7e9fc,
+   border-bottom: 1px solid #e7e9fc;
 }
 
 .logo {
@@ -274,6 +274,7 @@ font-weight: 500;
 line-height: 24px;
 letter-spacing: 0.4px;
 text-align: center;
+margin-top: 32px;
 }
 
 .section-four-positions {
@@ -286,6 +287,7 @@ line-height: 24px;
 letter-spacing: 0.32px;
 margin-top: 8px;
 text-align: center;
+margin-bottom: 32px;
 }
 
 .project-names {
@@ -339,15 +341,19 @@ padding: 0 15px 0 15px ;
   }
 .menu-header-navigation {
    display: flex;
-   align-items: center;
+   align-items: baseline;
    padding-top: 24px;
    padding-bottom: 24px;
 }
 
 .list-contact {
    display: flex;
+   align-items: center;
    gap: 40px;
    margin-left: 332px;
+   padding-top: 24px;
+   padding-bottom: 24px;
+   
 }
 
 .section-one-styling {
