--- a/css/styles.css
+++ b/css/styles.css
@@ -331,7 +331,8 @@ margin: 0 auto;
 .header {
 border-bottom: 1px solid var(--cornflower-color);
 margin: 0 auto;
-padding: 0 15px 0 15px ;
+padding-left: 15px;
+padding-right: 15px;
 }
 
 .menu-header {
@@ -341,7 +342,7 @@ padding: 0 15px 0 15px ;
   }
 .menu-header-navigation {
    display: flex;
-   align-items: baseline;
+   align-items: center;
    padding-top: 24px;
    padding-bottom: 24px;
 }
@@ -416,7 +417,8 @@ border-radius: 4px;
    padding: 32px 0px;
    text-align: center;
 }
-.section-four-list-styling {
+/*.section-four-list-styling {
    display: flex;
    gap: 24px;
 }
+*/
