--- a/css/styles.css
+++ b/css/styles.css
@@ -297,7 +297,10 @@ font-style: normal;
 font-weight: 500;
 line-height: 24px; 
 letter-spacing: 0.4px;
-color: #2E2F42
+color: #2E2F42;
+padding-top: 32px;
+padding-bottom: 8px;
+text-align: center;
 }
 
 .project-description {
@@ -308,6 +311,8 @@ font-weight: 400;
 line-height: 24px; /* 150% */
 letter-spacing: 0.32px;
 color: #434455;
+text-align: center;
+padding-bottom: 32px;
 }
 
 .section-four-bg {
@@ -451,10 +456,9 @@ border: 1px solid transparent;
    flex-wrap: wrap;
    column-gap: 24px;
    row-gap: 48px;
-  /* width: calc((100% - 48px) / 3);*/
-   }
+     }
 .projects-link-styling {
-   padding: 16px 32px;
+   
    border: 1px solid #e7e9fc;
    border-top: none;
    margin-bottom: 8px;
