--- a/css/styles.css
+++ b/css/styles.css
@@ -423,7 +423,7 @@ border-radius: 4px;
    width: calc((100%-48px)/3);
 }
 .pictures-signature {
-   padding: 32px 0px;
+   /*padding: 32px 0px;*/
    text-align: center;
 }
 .section-four-list-styling {
