--- a/css/styles.css
+++ b/css/styles.css
@@ -298,8 +298,8 @@ font-weight: 500;
 line-height: 24px; 
 letter-spacing: 0.4px;
 color: #2E2F42;
-padding-top: 32px;
 margin-bottom: 8px;
+margin-top: 32px;
 text-align: center;
 }
 
@@ -312,7 +312,6 @@ line-height: 24px; /* 150% */
 letter-spacing: 0.32px;
 color: #434455;
 text-align: center;
-padding-bottom: 32px;
 }
 
 .section-four-bg {
@@ -329,8 +328,8 @@ padding-bottom: 32px;
 
 .container {
 max-width: 1158px;
-padding: 0 15px 0 15px;
 margin: 0 auto;
+padding: 0px 15px 0px 15px;
 }
 
 .header {
@@ -461,8 +460,12 @@ border: 1px solid transparent;
    border: 1px solid var(--cornflower-color);
    border-top: none;
    padding: 32px 16px;
+
    
    }
 .list-project-item-styling {
-width: calc((100%-48)/3);
+flex-basis: calc((100%-48)/3);
+
+
+
 }
