--- a/css/styles.css
+++ b/css/styles.css
@@ -192,9 +192,13 @@ cursor: pointer;
    line-height: 1.5;
    letter-spacing: 0.02em;
    max-width: 264px;
-   margin-top: 16px;
+   /*margin-top: 16px;*/
 }
 
+
+.footer-link {
+   margin-bottom: 16px;
+}
 .hero {
 background-color: #2E2F42;
 padding: 188px 0px 188px;
@@ -423,7 +427,8 @@ border-radius: 4px;
    width: calc((100% - 48px)/3);
 }
 .pictures-signature {
-   padding: 32px 0px;
+   *padding: 32px 0;
+
    text-align: center;
 }
 .section-four-list-styling {
@@ -466,7 +471,8 @@ border: 1px solid transparent;
    }
 .list-project-item-styling {
 flex-basis: calc((100% - 48)/3);
+}
 
-
-
+.link-padding {
+   padding: 24px 0;
 }
