--- a/css/styles.css
+++ b/css/styles.css
@@ -336,7 +336,7 @@ max-width: 1158px;
 padding: 0 15px;
 margin: 0 auto;
 }
-   
+
 .header {
 border-bottom: 1px solid var(--cornflower-color);
 margin: 0 auto;
@@ -397,10 +397,16 @@ border-radius: 4px;
    overflow: hidden;
 }
 
-/*.section {
+.section {
+   /*[padding-top: 120px;*/
+   padding-bottom: 120px;
+}
+
+.section-four-padding {
    padding-top: 120px;
    padding-bottom: 120px;
-}*/
+}
+
 .section-two-styling {
   
   display: flex;
@@ -416,7 +422,7 @@ border-radius: 4px;
 .section-two-li {
    display: flex;
    gap: 24px;
-   flex-basis: calc((100% - 72px)/4);
+   width: calc((100% - 72px) / 4);
 }
 
 .section-tree-styling {
@@ -424,7 +430,7 @@ border-radius: 4px;
 }
 .section-tree-styling-ul {
    gap: 24px;
-   width: calc((100% - 48px)/3);
+   width: calc((100% - 48px) / 3);
 }
 .pictures-signature {
    *padding: 32px 0;
@@ -474,5 +480,5 @@ flex-basis: calc((100% - 48)/3);
 }
 
 .link-padding {
-   padding: 24px 0;
-}
+   padding-top: 24px;
+   padding-bottom: 24px;}
