--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,8 @@ text-align: center;
 
 .container {
 max-width: 1158px;
-padding: 0 15px;
+padding-left: 15px;
+padding-right: 15px;
 margin: 0 auto;
 }
 
@@ -349,6 +350,7 @@ padding-right: 15px;
    padding-top: 24px;
    padding-bottom: 24px;
   }
+
 .menu-header-navigation {
    display: flex;
    align-items: center;
@@ -436,14 +438,18 @@ border-radius: 4px;
 
 .section-tree-styling {
    padding-top: 0;
+   padding-bottom: 120px;
 }
 .section-tree-styling-ul {
    gap: 24px;
    width: calc((100% - 48px) / 3);
 }
-.pictures-signature {
-   *padding: 32px 0;
 
+.section-tree-empty {
+
+}
+.pictures-signature {
+   padding: 32px 0;
    text-align: center;
 }
 .section-four-list-styling {
