--- a/css/styles.css
+++ b/css/styles.css
@@ -437,7 +437,7 @@ border-radius: 4px;
 }
 
 .section-tree-styling {
-   padding-top: 0;
+ /*  padding-top: 0;*/
    padding-bottom: 120px;
 }
 .section-tree-styling-ul {
@@ -446,7 +446,7 @@ border-radius: 4px;
 }
 
 .section-tree-empty {
-
+/*padding: 0;*/
 }
 .pictures-signature {
    padding: 32px 0;
