--- a/css/styles.css
+++ b/css/styles.css
@@ -446,17 +446,14 @@ border-radius: 4px;
 }
 .section-tree-styling-ul {
    gap: 24px;
-   width: calc((100% - 48px) / 3);
+   
 }
 
 .section-tree-empty {
-/*padding: 0;*/
+   width: calc((100% - 48px) / 3);
 }
 .pictures-signature {
-   padding-top: 32px;
-   padding-left: 16px;
-   padding-bottom: 32px;
-   padding-right: 16px;
+   padding: 32px 0;
    text-align: center;
 }
 .section-four-list-styling {
