--- a/css/styles.css
+++ b/css/styles.css
@@ -333,8 +333,7 @@ text-align: center;
 
 .container {
 max-width: 1158px;
-padding-left: 15px;
-padding-right: 15px;
+padding: 0 15px;
 margin: 0 auto;
 }
 
@@ -347,15 +346,14 @@ padding-right: 15px;
 
 .menu-header {
    display: flex;
-   padding-top: 24px;
-   padding-bottom: 24px;
+   /*padding-top: 24px;
+   padding-bottom: 24px;*/
   }
 
 .menu-header-navigation {
    display: flex;
    align-items: center;
-   /*padding-top: 24px;
-   padding-bottom: 24px;*/
+  padding: 24px 0;
 }
 .menu-header-padding {
    padding-top: 24px;
