--- a/css/styles.css
+++ b/css/styles.css
@@ -340,8 +340,8 @@ margin: 0 auto;
 .header {
 border-bottom: 1px solid var(--cornflower-color);
 margin: 0 auto;
-padding-left: 15px;
-padding-right: 15px;
+/*padding-left: 15px;
+padding-right: 15px;*/
 }
 
 .menu-header {
