--- a/css/styles.css
+++ b/css/styles.css
@@ -346,14 +346,14 @@ padding-right: 15px;*/
 
 .menu-header {
    display: flex;
-   /*padding-top: 24px;
-   padding-bottom: 24px;*/
+   padding-top: 24px;
+   padding-bottom: 24px;
   }
 
 .menu-header-navigation {
    display: flex;
    align-items: center;
-  padding: 24px 0;
+  /*padding: 24px 0;*/
 }
 /*.menu-header-padding {
    padding-top: 24px;
