--- a/css/styles.css
+++ b/css/styles.css
@@ -346,8 +346,8 @@ padding-right: 15px;*/
 
 .menu-header {
    display: flex;
-   padding-top: 24px;
-   padding-bottom: 24px;
+   /*padding-top: 24px;
+   padding-bottom: 24px;*/
   }
 
 .menu-header-navigation {
@@ -359,6 +359,9 @@ padding-right: 15px;*/
    padding-top: 24px;
    padding-bottom: 24px;
 }*/
+.link-main-paddind {
+   padding-top: 24px;
+   padding-bottom: 24px;}
 
 .list-contact {
    display: flex;
