--- a/css/styles.css
+++ b/css/styles.css
@@ -360,9 +360,8 @@ padding-right: 15px;*/
    padding-bottom: 24px;
 }*/
 .link-main-paddind {
-   padding-top: 24px;
-   padding-bottom: 24px;}
-
+   padding: 24px 0;
+}
 .list-contact {
    display: flex;
    align-items: center;
