--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,7 @@ ul {
    font-style: normal;
    margin-right: 76px;
    display: inline-block;
-  
-  
+
 }   
 
 .link {
@@ -94,8 +93,6 @@ color: #434455;
    line-height: 24px;
    letter-spacing: 0.32px;
    gap: 40px;
-   border-bottom: 1px solid #e7e9fc;
-
    
 }
 
@@ -134,6 +131,7 @@ color: #434455;
    color: var(--white-color);
    background-color: #404BBF;
 }
+
 .button-menu:focus {
    color: var(--white-color);
    background-color: #404BBF;
@@ -148,7 +146,7 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: #ffffff;
 background-color: #4d5ae5;
-margin-top: 48px;
+/*margin-top: 48px;*/
 }
 
 .cursor {
@@ -166,7 +164,6 @@ cursor: pointer;
 .list {
    list-style: none;
    display: flex;
-
    gap: 40px;   
 }
 
@@ -192,18 +189,19 @@ cursor: pointer;
    line-height: 1.5;
    letter-spacing: 0.02em;
    max-width: 264px;
-   /*margin-top: 16px;*/
 }
-
-
 .footer-link {
    margin-bottom: 16px;
 }
+
 .hero {
 background-color: #2E2F42;
-padding: 188px 0px 188px;
+padding-top: 188px;
+padding-bottom: 188px;
+}
 
-
+.hero-one {
+padding: 120px 0;
 }
 
 .section-one {
@@ -216,7 +214,10 @@ letter-spacing: 0.02em;
 text-align: center;
 color: var(--white-color);
 background-color: #2E2F42;
-margin-bottom: 48px;  
+max-width: 496px;
+margin: 0 auto;
+
+
 }
 
 .section-two {
@@ -278,7 +279,6 @@ font-weight: 500;
 line-height: 24px;
 letter-spacing: 0.4px;
 text-align: center;
-/*margin-top: 32px;*/
 margin-bottom: 8px;
 }
 
@@ -290,9 +290,7 @@ font-style: normal;
 font-weight: 400;
 line-height: 24px; 
 letter-spacing: 0.32px;
-/*margin-top: 8px;*/
 text-align: center;
-/*margin-bottom: 32px;*/
 }
 
 .project-names {
@@ -340,43 +338,32 @@ margin: 0 auto;
 .header {
 border-bottom: 1px solid var(--cornflower-color);
 margin: 0 auto;
-/*padding-left: 15px;
-padding-right: 15px;*/
+
 }
 
 .menu-header {
    display: flex;
-  /* padding-top: 24px;
-   padding-bottom: 24px;*/
+ 
   }
 
 .menu-header-navigation {
    display: flex;
-   align-items: center;
-   /*padding: 24px 0;*/
-}
-/*.menu-header-padding {
-   padding-top: 24px;
-   padding-bottom: 24px;
-}*/
+   align-items: center;}
+   
 
 .list-contact {
    display: flex;
    align-items: center;
    gap: 40px;
-   margin-left: 332px;
-
-   
+   margin-left: 332px;  
 }
 
 .section-one-styling {
-display: block;
-max-width: 496px;
-/*margin: 0 auto;*/
-margin-bottom: 48px;
-padding-top: 188px;
-padding-bottom: 188px;
+display: box;
+align-items: center;
 
+
+/*max-width: 496px;*/
 }
 
 .button-styling {
@@ -386,6 +373,7 @@ min-width: 169px;
 height: 56px;
 border: none;
 border-radius: 4px;
+margin-top: 48px;
 }  
 
 .visually-hidden {
@@ -401,14 +389,6 @@ border-radius: 4px;
    overflow: hidden;
 }
 
-/*.section {
-   padding-top: 120px;
-   padding-bottom: 120px;
-}*/
-.section-one-padding {
-   padding-top: 188px;
-   padding-bottom: 188px;
-}
 
 .section-two-padding {
    padding-top: 120px;
@@ -421,10 +401,9 @@ border-radius: 4px;
 }
 
 .section-two-styling {
-  
+ 
   display: flex;
    gap: 24px;
-  /* width: calc((100%-72px)/4);*/
 }
 
 .section-portfolio {
@@ -434,12 +413,13 @@ border-radius: 4px;
 
 .section-two-li {
    display: flex;
+   flex-direction: column;
    gap: 24px;
    width: calc((100% - 72px) / 4);
 }
 
 .section-tree-styling {
- /*  padding-top: 0;*/
+
    padding-bottom: 120px;
 }
 .section-tree-styling-ul {
